--- a/src/preview/components/button/Button.module.css
+++ b/src/preview/components/button/Button.module.css
@@ -1,21 +1,11 @@
 .button {
-  background: var(--primary, #000000);
-  color: #ffffff;
-  padding: .5rem 1rem;
-  font-weight: 500;
+  background: var(--btn-background, #000000);
+  color: var(--text-color, #ffffff);
   border: none;
-  cursor: pointer;
+  font-weight: 500;
 
-  &:global(.secondary) {
-    background: var(--complementary, #000000);
-  }
-
-  &:hover {
+  &:hover:not(:global(.btn-outline)) {
     filter: brightness(0.9);
-  }
-
-  &:global(.w-full) {
-    width: 100%;
   }
 
   &:global(.round) {
@@ -24,5 +14,16 @@
 
   &:global(.circle) {
     border-radius: 999px;
+  }
+
+  &:global(.btn-outline) {
+    background: transparent;
+    color: var(--btn-color, #000000);
+    border: 1px solid var(--btn-color, #000000);
+  }
+
+  &:global(.btn-outline):hover {
+    background: var(--btn-color, #000000);
+    color: var(--text-color, #ffffff);
   }
 }
